@@ -32,7 +32,7 @@ requires:
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Lego-Part
-  homepage: https://github.com/tupinek/Lego-Part
+  homepage: https://github.com/michal-josef-spacek/Lego-Part
   license: http://opensource.org/licenses/bsd-license.php
-  repository: git://github.com/tupinek/Lego-Part
+  repository: git://github.com/michal-josef-spacek/Lego-Part
 version: '0.04'
