@@ -21,8 +21,8 @@ requires 'Scalar::Util' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Lego-Part';
-resources 'homepage' => 'https://github.com/tupinek/Lego-Part';
-resources 'repository' => 'git://github.com/tupinek/Lego-Part';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Lego-Part';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Lego-Part';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.22;
 test_requires 'Test::More' => 0;
