@@ -74,7 +74,7 @@ SEE ALSO
         Install the Lego modules.
 
 REPOSITORY
-    <https://github.com/tupinek/Lego-Part>
+    <https://github.com/michal-josef-spacek/Lego-Part>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
