@@ -1,4 +1,5 @@
 0.04
+ - Update author github username.
  - Update Module::Install to 1.21 version.
 
 0.03 2015-09-23T23:30:47+02:00
